syntax = "proto3";

option csharp_namespace = "GrpcServer.Web.Protos";
import "employee_status.proto";
import "google/protobuf/timestamp.proto";


message Employee {
  int32 id = 1;
  int32 no = 2;
  string first_name = 3;
  string last_name = 4;
  // float salary = 5;
  MonthSalary month_salary = 6;
  EmployeeStatus status = 7;
  google.protobuf.Timestamp last_modified = 8;

  reserved "salary";
  reserved 5;
}

message MonthSalary {
	float basic = 1;
	float bonus = 2;
}

message GetByNoRequest {
  int32 no = 1;
}
message GetByAllRequest {

}
message EmployeeRequest {
  Employee employee = 1;
}

message EmployeeResponse {
  Employee employee = 1;
}

message AddPhoneRequest {
  bytes data = 1;
}

message AddPhoneResponse {
  bool isOk = 1;
}

message TokenRequest {
	string username = 1;
	string password = 2;
}

message TokenResponse {
	string token = 1;
	google.protobuf.Timestamp expiration = 2;
	bool isSuccess = 3;
}

service EmployeeService {
  rpc GetByNo (GetByNoRequest) returns (EmployeeResponse);
  rpc GetByAll (GetByAllRequest) returns (stream EmployeeResponse);
  rpc AddPhoto(stream AddPhoneRequest) returns (AddPhoneResponse);

  rpc Save (EmployeeRequest) returns (EmployeeResponse);
  rpc SaveAll (stream EmployeeRequest) returns (stream EmployeeResponse);
  rpc GenerateToken(TokenRequest) returns (TokenResponse);
}
